added a bit to acknowledgements

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -669,8 +669,8 @@ between events that change the rate of coalescence,
 which we refer to as the genealogy embedding table (Table~\ref{tab:table-1}). 
 
 To better understand the relationship between the MS-SMC' and the genealogy
-embedding table, a specific branch ($b$) from Fig.~\ref{fig:fig1}. 
-Branch 7 on the genealogy spans through four relevant intervals, 
+embedding table, consider a specific branch ($b$) from Fig.~\ref{fig:fig1}. 
+Branch 7 on the genealogy spans four relevant intervals, 
 labeled as rows 1, 6, 7, and 8 in Table~\ref{tab:table-1} 
 (this can be found by searching for the branch label in the \emph{branches} 
 column of the table). We record the number 
@@ -1534,8 +1534,8 @@ Inference of genealogies along a chromosome is a common goal in population genet
 
 \subsubsection{Acknowledgements}
 This work was supported by the National Science Foundation 
-(NSF DEB-2046813 awarded to D.A.R.E. and \hl{NSF GRFP awarded 
-to P.F.M.). Thanks to ... for feedback on ...}
+(NSF DEB-2046813 awarded to D.A.R.E. and NSF Graduate Research Fellowship DGE 16-44869 awarded 
+to P.F.M.). \hl{Thanks to Yun Deng for guidance on preliminary ideas and to...}
 
 
 %\subsection{Citations}
